--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <h2 id="player1Display"></h2>
     <div id="turn"></div>
     <div id="errorDiv"></div>
-    <div id="container">
+    <div id="killed-pawns" class="float-left">Killed pawns here</div>
+    <div id="container" class="float-left">
         <div class="white-background"></div>
         <div class="black-background"></div>
         <div class="white-background"></div>
@@ -79,7 +80,7 @@
 
         
     </div>
-
+    <div style="clear: left;"></div>
     <h2 id="player2Display"></h2>
     
     <div id="form-container">
